--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,8 @@ services:
       - mariadb
     volumes:
       - ./html:/var/www/html           # map content of ./html in your computer to /var/www/html of container
+      - ./php_conf/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini    # map xdebug.ini into the container
+      - ./php_conf/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini # map error_reporting.ini into the container
   nginx:
     image: nginx:1.29                  # set the nginx version you need for your project
     ports:
