--- a/compose.yaml
+++ b/compose.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - mariadb
+      - db
     volumes:
       - ./html:/var/www/html           # map content of ./html in your computer to /var/www/html of container
       - ./php_conf/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini    # map xdebug.ini into the container
@@ -19,8 +19,8 @@ services:
     volumes:
       - ./html:/var/www/html           # map content of ./html in your computer to /var/www/html of container
       - ./nginx_conf:/etc/nginx/conf.d # map content of ./nginx-conf in your computer to /etc/nginx/conf.d of container
-  mariadb:
-    image: mariadb:10.11               # set the mariadb version you need for your project
+  db:
+    image: mariadb:10.11               # set the database server and version. Example: mariadb:10.11 or mysql:9.4
     environment:
       - MYSQL_ROOT_PASSWORD=1234       # set mysql root pw or use: MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=blogdb          # this is optional, name a database to be created on image creation
@@ -28,14 +28,14 @@ services:
       - MYSQL_PASSWORD=1234            # this is optional, password for the above created user
       - MYSQL_TCP_PORT=3306            # this is optional, default port is 3306
     volumes:
-      - ./mariadb_data:/var/lib/mysql  # map content of ./mariadb_data in your computer to /var/lib/mysql of container
+      - ./db_data:/var/lib/mysql       # map content of ./db_data in your computer to /var/lib/mysql of container
   phpmyadmin:
-    image: phpmyadmin:5.2.2            # set the phpmyadmin version you need for your project
+    image: phpmyadmin:5.2.2            # set the phpmyadmin version. Example: phpmyadmin:5.2.2
     ports:
       - "8081:80"                      # map your computer port to the container port
     depends_on:
-      - mariadb
+      - db
     environment:
-      - PMA_HOST=mariadb
+      - PMA_HOST=db
       - PMA_PORT=3306
       - UPLOAD_LIMIT=512M              # set upload_max_filesize and post_max_size
